Extract one of the artifacts

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -182,6 +182,9 @@
           "run": "ls -l"
         },
         {
+          "run": "tar --extract --verbose --file cabal-gild-${{ github.sha }}-ubuntu-22.04-9.8"
+        },
+        {
           "run": "cp cabal-gild-${{ github.sha }}-ubuntu-22.04-9.8/${{ env.PREFIX }}.tar.gz ."
         },
         {
