--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -180,7 +180,7 @@
           "uses": "actions/download-artifact@v4"
         },
         {
-          "run": "sh -exc 'for f in */artifact.tar; do tar --extract --file $f --verbose; done'"
+          "run": "sh -exc 'for d in *; do cd $d; tar --extract --file artifact.tar --verbose; cd ..; done'"
         },
         {
           "run": "cp cabal-gild-${{ github.sha }}-ubuntu-22.04-9.8/artifact/${{ env.PREFIX }}.tar.gz ."
